styling - issues with overflowing text

--- a/static/styles.css
+++ b/static/styles.css
@@ -2,3 +2,25 @@ body
 {
     font-family: "Inter", sans-serif;
 }
+
+#main-container
+{
+    display: flex;
+    justify-content: space-around;
+   
+}
+
+.article-card
+{
+    gap: 20px;
+    width: 250px;
+    height: 400px;
+    padding: 1rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+.article-card p 
+{
+    text-overflow: ellipsis;   
+}
